# zefir

./: .gitignore  README.md  meson.build
inc/: sql_cipher.hpp
res/: gui.glade
src/: main.cpp  sql_cipher.cpp  sql_cipher_exception.cpp
src/framework/: logger.cpp  logger.hpp  types.hpp
src/passwords/: generator.cpp  generator.hpp
src/sql_cipher/: connection.cpp  connection.hpp  error.cpp  error.hpp  result.cpp  result.hpp  sqlite.hpp  statement.cpp  statement.hpp
src/zefir/: abstract_store.hpp  app.cpp  app.hpp  commands_log.cpp  commands_log.hpp  property.cpp  property.hpp  repo.cpp  repo.hpp  secret.cpp  secret.hpp  secret_message.cpp  secret_message.hpp  secure_encryptor.cpp  secure_encryptor.hpp  secure_message.hpp  secure_store.cpp  secure_store.hpp  sql_cipher_store.cpp  sql_cipher_store.hpp  store.hpp
src/zefir/cli/: app.cpp  app.hpp  command.cpp  command.hpp  terminal.cpp  terminal.hpp
src/zefir/cli/commands/: new_password.cpp  new_password.hpp  show_password.cpp  show_password.hpp
src/zefir/gui/: app.cpp  app.hpp  master_password_window.cpp  master_password_window.hpp  secrets_window.cpp  secrets_window.hpp
